fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
     grid-template-rows: 1fr 1fr 8fr 1fr;
     height: 100vh;
     width: 90%;
+    min-width: 1200px;
+    border: 2px solid blue;
 }
 
 .header {
